--- a/minio-infra/minio-deployment.yaml
+++ b/minio-infra/minio-deployment.yaml
@@ -9,8 +9,8 @@ spec:
     matchLabels:
       app: minio
   template:
-    selector:
-      matchLabels:
+    metadata:
+      labels:
         app: minio
     spec:
       containers:
