--- a/ray-server-infra/ray-serve.yaml
+++ b/ray-server-infra/ray-serve.yaml
@@ -53,12 +53,16 @@ spec:
               ports:
                 - containerPort: 6379
                   name: gcs-server
+                  protocol: TCP
                 - containerPort: 8265 # Ray dashboard
                   name: dashboard
+                  protocol: TCP
                 - containerPort: 10001
                   name: client
+                  protocol: TCP
                 - containerPort: 8000
                   name: serve
+                  protocol: TCP
     workerGroupSpecs:
       # the pod replicas in this group typed worker
       - replicas: 1
